--- a/index.html
+++ b/index.html
@@ -77,33 +77,34 @@
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
                                     <label class="form-check-label" for="inlineRadio1"><i class="fab fa-cc-mastercard fa-2x"></i></label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
+                                </div>
+                                <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2"><i class="fab fa-cc-visa fa-2x"></i></label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
+                                </div>
+                                <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2"><i class="fab fa-cc-amex fa-2x"></i></label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
+                                </div>
+                                <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2"><i class="fab fa-cc-diners-club fa-2x"></i></label>
-                                  </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col">
-
                             <label for="comments">Comments:</label>
                             <textarea class="form-control mt-1 mb-3" placeholder="Add any notes here" id="comments" style="height: 100px"></textarea>                         
                         </div>
                     </div>
                 </div>
                 <div class="card-footer">
-                    <div class="row justify-content-end">
+                    <div class="row justify-content-end"> <!--send/cancel buttons-->
                         <div class="col-3">
-                            <button type="submit" class="btn btn-primary mr-3">Submit</button>
-                            <button type="reset" class="btn btn-secondary mr-3">Cancel</button>
+                            <label for="submit"></label>
+                            <input type="submit" class="btn btn-primary mr-3">
+                            <label for="reset"></label>
+                            <input type="reset" class="btn btn-primary mr-3">
                         </div> 
                     </div>
                 </div>
